# custom_user_assessment

./: README.md  pyproject.toml
customuser/: settings.py  urls.py
myuser/: admin.py  forms.py  models.py  views.py
myuser/migrations/: 0001_initial.py
templates/: index.html  login.html
