[tool.poetry]
name = "custom-user"
version = "0.1.0"
description = "create custom user"
authors = ["Michael DeMory <mjdemory2891@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
